# fill

./: CMakeLists.txt  README.md
.github/workflows/: Ubuntu.yml  Windows.yml
fill/: CMakeLists.txt
fill/include/: main.cpp
input/: gargoyle_permutation.txt
